feat: profil buku

--- a/ENSIKLO/ENSIKLO/ENSIKLO/Views/BookDetailPage.xaml
+++ b/ENSIKLO/ENSIKLO/ENSIKLO/Views/BookDetailPage.xaml
@@ -8,12 +8,49 @@
     </ContentPage.ToolbarItems>
 
 
-    <StackLayout Spacing="20" Padding="15" BackgroundColor="AliceBlue">
-        <Label Text="Text:" FontSize="Medium" TextColor="Black"/>
-        <Label Text="{Binding Title }" FontSize="Small" TextColor="Black"/>
-        <Label Text="Description:" FontSize="Medium" TextColor="Black"/>
-        <Label Text="{Binding Description_book}" FontSize="Small" TextColor="Black"/>
-        <Label Text="{Binding Publisher}" FontSize="Small" TextColor="Black"/>
-        <Label Text="{Binding Year_published}" FontSize="Small" TextColor="Black"/>
+    <StackLayout Spacing="20" Padding="15" Margin="20">
+        <Grid>
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <StackLayout Grid.Column="0" Margin="75, 0, 0, 0">
+                <Image Source="{Binding Url_cover}" WidthRequest="180"/>
+            </StackLayout>
+            <StackLayout Grid.Column="1" Padding="20, -5, 0, 0">
+                <Label Text="{Binding Title}" FontSize="Large" FontAttributes="Bold"/>
+                <Label Text="{Binding Author}" FontSize="Medium" TextColor="DarkGray"/>
+
+                <Label FontSize="Medium" TextColor="DarkGray">
+                    <Label.FormattedText>
+                        <FormattedString>
+                            <Span Text="{Binding Publisher}"/>
+                            <Span Text=" ("/>
+                            <Span Text="{Binding Year_published, StringFormat='{0:MMMM dd, yyyy}'}" />
+                            <Span Text=")"/>
+                        </FormattedString>
+                    </Label.FormattedText>
+                </Label>
+
+                <Label Text="{Binding Category}" FontSize="Medium" TextColor="DarkGray"/>
+
+                <Grid Margin="0, 30, 0, 0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <Button Text="Add to Library" HeightRequest="38" HorizontalOptions="CenterAndExpand" Grid.Column="0" CornerRadius="15"></Button>
+                    <Button Text="Preview" HeightRequest="38" HorizontalOptions="CenterAndExpand" Grid.Column="1" BackgroundColor="Transparent" BorderColor="DarkGray" CornerRadius="15"></Button>
+                </Grid>
+            </StackLayout>
+
+        </Grid>
+        <StackLayout>
+            <Label Text="Description" FontSize="Medium"  Margin="75, 15, 0, 0" FontAttributes="Bold"/>
+            <Label Text="{Binding Description_book}" FontSize="Small"  Margin="75, 0, 0, 0" />
+            <Label Text="{Binding Keywords}" FontAttributes="Italic" FontSize="Micro" TextColor="Gray"  Margin="75, 0, 0, 0" />
+        </StackLayout>
+
     </StackLayout>
 </ContentPage>
