--- a/ENSIKLO/ENSIKLO/ENSIKLO/Views/RegisterPage.xaml
+++ b/ENSIKLO/ENSIKLO/ENSIKLO/Views/RegisterPage.xaml
@@ -10,8 +10,8 @@
             <StackLayout>
                 <Entry Placeholder="Username" Text="{Binding Username, Mode=TwoWay}"></Entry>
                 <Entry Placeholder="Email" Text="{Binding Email, Mode=TwoWay}"></Entry>
-                <Entry Placeholder="Role" Text="{Binding Role, Mode=TwoWay}"></Entry>
                 <Entry Placeholder="Password" IsPassword="True" Text="{Binding Password, Mode=TwoWay}"></Entry>
+                <Entry Placeholder="Confirmation Password" IsPassword="True" Text="{Binding ConfirmationPassword, Mode=TwoWay}"></Entry>
                 <Button BackgroundColor="#009BF0" CornerRadius="10" TextColor="White" Text="Sign Up" Margin="0,20"
                         Command="{Binding SignUpCommand}"></Button>
                 <StackLayout Orientation="Horizontal">
