--- a/ENSIKLO/ENSIKLO/ENSIKLO/Views/CatalogPage.xaml
+++ b/ENSIKLO/ENSIKLO/ENSIKLO/Views/CatalogPage.xaml
@@ -26,7 +26,7 @@
 
 
                     <CollectionView 
-                                ItemsSource="{Binding Books}" 
+                                ItemsSource="{Binding BooksTop}" 
                                 Margin="10"
                                 x:Name="ItemsListViewTop" 
                                 SelectionMode="Single"
@@ -113,7 +113,7 @@
 
 
                     <CollectionView 
-                                ItemsSource="{Binding Books}" 
+                                ItemsSource="{Binding BooksBottom}" 
                                 Margin="10"
                                 x:Name="ItemsListViewBottom" 
                                 SelectionMode="Single"
