add library service, view model

--- a/ENSIKLO/ENSIKLO/ENSIKLO/Views/BookDetailPage.xaml
+++ b/ENSIKLO/ENSIKLO/ENSIKLO/Views/BookDetailPage.xaml
@@ -40,7 +40,7 @@
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
-                    <Button Text="Add to Library" HeightRequest="38" HorizontalOptions="CenterAndExpand" Grid.Column="0" CornerRadius="15"Command="{Binding AddToLibaryCommand}></Button>
+                    <Button Text="Add to Library" HeightRequest="38" HorizontalOptions="CenterAndExpand" Grid.Column="0" CornerRadius="15"></Button>
                     <Button Text="Preview" HeightRequest="38" HorizontalOptions="CenterAndExpand" Grid.Column="1" BackgroundColor="Transparent" BorderColor="DarkGray" CornerRadius="15"></Button>
                 </Grid>
             </StackLayout>
