--- a/ENSIKLO/ENSIKLO/ENSIKLO/Views/LibraryPage.xaml
+++ b/ENSIKLO/ENSIKLO/ENSIKLO/Views/LibraryPage.xaml
@@ -1,12 +1,101 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ENSIKLO.Views.LibraryPage">
+             x:Class="ENSIKLO.Views.LibraryPage"
+             xmlns:model="clr-namespace:ENSIKLO.Models"
+             xmlns:local="clr-namespace:ENSIKLO.ViewModels"
+             x:Name="BrowseBooksPage">
+
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Library page"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
+        <ScrollView Orientation="Vertical">
+
+            <StackLayout BackgroundColor="WhiteSmoke">
+                <RefreshView x:DataType="local:BookViewModel" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
+                    <CollectionView 
+                            ItemsSource="{Binding Books}" 
+                            x:Name="ItemsListView" 
+                            SelectionMode="Single"
+                            HeightRequest="100"
+                            SelectedItem="{Binding SelectedBook}"
+                            >
+                        <CollectionView.EmptyView>
+
+                            <StackLayout>
+                                <Label Text="No data Available" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"></Label>
+                            </StackLayout>
+
+
+                        </CollectionView.EmptyView>
+                        <CollectionView.ItemsLayout>
+                            <GridItemsLayout Orientation="Vertical" Span="6" HorizontalItemSpacing="4" VerticalItemSpacing="4"/>
+                        </CollectionView.ItemsLayout>
+
+                        <CollectionView.ItemTemplate>
+                            <DataTemplate>
+                                <Frame CornerRadius="12" 
+                                           HorizontalOptions="Center" 
+                                           VerticalOptions="Start"
+                                           HasShadow="True"
+                                           BackgroundColor="White"
+                                           BorderColor="Gray"         
+                                           IsClippedToBounds="True"
+                                           Padding="0">
+                                    <Grid Padding="8" Margin="4" x:DataType="model:Book" BackgroundColor="White">
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="3*" />
+
+                                            <RowDefinition Height="1*" />
+                                        </Grid.RowDefinitions>
+
+                                        <Image Source="{Binding Url_cover}"
+                                                       Grid.Row="0"
+                                                       Aspect="AspectFit" 
+                                                       WidthRequest="30"
+                                                       HeightRequest="150"
+                                                       />
+
+
+                                        <StackLayout Grid.Row="1">
+                                            <Label Grid.Column="1"
+                                                           VerticalOptions="Center"
+                                                           Text="{Binding Title}"
+                                                           FontAttributes="Bold"
+                                                           TextColor="Black"    
+                                                           />
+
+
+
+                                            <Label Text="{Binding Description_book}"
+                                                            Grid.Row="1"
+                                                            Grid.Column="1"
+                                                            VerticalOptions="Start"
+                                                            FontAttributes="Italic"
+                                                            TextColor="Black"
+                                                            />
+
+
+
+                                            <StackLayout.GestureRecognizers>
+                                                <TapGestureRecognizer 
+                                                    NumberOfTapsRequired="1"
+                                                    Command="{Binding Source={RelativeSource AncestorType={x:Type local:BookViewModel}}, Path=BookTapped}"		
+                                                    CommandParameter="{Binding .}">
+                                                </TapGestureRecognizer>
+                                            </StackLayout.GestureRecognizers>
+
+                                        </StackLayout>
+
+                                    </Grid>
+                                </Frame>
+
+                            </DataTemplate>
+                        </CollectionView.ItemTemplate>
+                    </CollectionView>
+
+                </RefreshView>
+
+
+            </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
