--- a/ENSIKLO/ENSIKLO/ENSIKLO/Views/ProfilePage.xaml
+++ b/ENSIKLO/ENSIKLO/ENSIKLO/Views/ProfilePage.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:ENSIKLO.ViewModels"
              x:Class="ENSIKLO.Views.ProfilePage">
     <ContentPage.Content>
         <ScrollView Orientation="Vertical">
@@ -10,9 +11,93 @@
                     <Label Text="{Binding Name, Mode=TwoWay}" TextColor="Black" FontSize="35" FontAttributes="Bold"/>
                     <Label Text="{Binding Email, Mode=TwoWay}" TextColor="Gray" FontSize="20" Margin="0, 0, 0, 20"/>
 
-                    <!--untuk admin, yang bagian ini dihapus-->
                     <Label Text="Finished books" TextColor="Black" FontSize="20" FontAttributes="Bold" Margin="0, 35, 0, 0"/>
                     <!--collection view buku yang udah dibaca (harusnya di library_user ntar ada tanda dia udah baca bukunya apa belum, ambil sql yang udah-->
+
+                    <!-- <RefreshView x:DataType="local:ProfileViewModel"   IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
+                        <CollectionView 
+                            ItemsSource="{Binding BooksBottom}" 
+                            x:Name="ItemsListView" 
+                            SelectionMode="Single"
+                            HeightRequest="100"
+                            SelectedItem="{Binding SelectedBook}"
+                            Margin="10"
+                            >
+                            <CollectionView.EmptyView>
+
+                                <StackLayout>
+                                    <Label Text="No data Available" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"></Label>
+                                </StackLayout>
+
+
+                            </CollectionView.EmptyView>
+                            <CollectionView.ItemsLayout>
+                                <GridItemsLayout Orientation="Vertical" Span="6" HorizontalItemSpacing="4" VerticalItemSpacing="4"/>
+                            </CollectionView.ItemsLayout>
+
+                            <CollectionView.ItemTemplate>
+                                <DataTemplate>
+                                    <Frame CornerRadius="12" 
+                                           HorizontalOptions="Center" 
+                                           VerticalOptions="Start"
+                                           HasShadow="True"
+                                           BackgroundColor="White"
+                                           BorderColor="Gray"         
+                                           IsClippedToBounds="True"
+                                           Padding="0">
+                                        <Grid Padding="8" Margin="4" x:DataType="model:Book" BackgroundColor="White">
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="3*" />
+
+                                                <RowDefinition Height="1*" />
+                                            </Grid.RowDefinitions>
+
+                                            <Image Source="{Binding Url_cover}"
+                                                       Grid.Row="0"
+                                                       Aspect="AspectFit" 
+                                                       WidthRequest="30"
+                                                       HeightRequest="100"
+                                                       />
+
+
+                                            <StackLayout Grid.Row="1">
+                                                <Label Grid.Column="1"
+                                                           VerticalOptions="Center"
+                                                           Text="{Binding Title}"
+                                                           FontAttributes="Bold"
+                                                           TextColor="Black"    
+                                                           />
+
+
+
+                                                <Label Text="{Binding Author}"
+                                                            Grid.Row="1"
+                                                            Grid.Column="1"
+                                                            VerticalOptions="Start"
+                                                            FontAttributes="Italic"
+                                                            TextColor="Black"
+                                                            />
+
+
+
+                                                <StackLayout.GestureRecognizers>
+                                                    <TapGestureRecognizer 
+                                                    NumberOfTapsRequired="1"
+                                                    Command="{Binding Source={RelativeSource AncestorType={x:Type local:BookViewModel}}, Path=BookTapped}"		
+                                                    CommandParameter="{Binding .}">
+                                                    </TapGestureRecognizer>
+                                                </StackLayout.GestureRecognizers>
+
+                                            </StackLayout>
+
+                                        </Grid>
+                                    </Frame>
+
+                                </DataTemplate>
+                            </CollectionView.ItemTemplate>
+                        </CollectionView>
+
+                    </RefreshView> -->
 
                     <Button Text="Logout" CornerRadius="10" BorderColor="#009BF0" BackgroundColor="Transparent" TextColor="#009BF0" HorizontalOptions="Start"
                         Command="{Binding LogoutCommand}">
